@@ -8,7 +8,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: winButton.test,v 1.5 2001/11/17 22:44:04 hobbs Exp $
+# RCS: @(#) $Id: winButton.test,v 1.6 2001/12/29 00:30:30 hobbs Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     source [file join [pwd] [file dirname [info script]] defs.tcl]
@@ -53,11 +53,13 @@ test winbutton-1.1 {TkpComputeButtonGeometry procedure} {pcOnly} {
     radiobutton .b4 -image image1 -bd 4 -padx 2 -pady 0
     pack .b1 .b2 .b3 .b4
     update
+    # with patch 463234 with native L&F enabled, this returns:
+    # {68 48 70 50 88 50 88 50}
     list [winfo reqwidth .b1] [winfo reqheight .b1] \
 	    [winfo reqwidth .b2] [winfo reqheight .b2] \
 	    [winfo reqwidth .b3] [winfo reqheight .b3] \
 	    [winfo reqwidth .b4] [winfo reqheight .b4]
-} {68 48 70 50 88 50 88 50}
+} {68 48 70 50 90 52 90 52}
 test winbutton-1.2 {TkpComputeButtonGeometry procedure} {pcOnly} {
     eval destroy [winfo children .]
     label .b1 -bitmap question -bd 3 -padx 0 -pady 2
@@ -66,11 +68,13 @@ test winbutton-1.2 {TkpComputeButtonGeometry procedure} {pcOnly} {
     radiobutton .b4 -bitmap question -bd 3 -padx 2 -pady 0
     pack .b1 .b2 .b3 .b4
     update
+    # with patch 463234 with native L&F enabled, this returns:
+    # {23 33 25 35 43 35 43 35}
     list [winfo reqwidth .b1] [winfo reqheight .b1] \
 	    [winfo reqwidth .b2] [winfo reqheight .b2] \
 	    [winfo reqwidth .b3] [winfo reqheight .b3] \
 	    [winfo reqwidth .b4] [winfo reqheight .b4]
-} {23 33 25 35 43 35 43 35}
+} {23 33 25 35 45 37 45 37}
 test winbutton-1.3 {TkpComputeButtonGeometry procedure} {pcOnly} {
     eval destroy [winfo children .]
     label .b1 -bitmap question -bd 3 -highlightthickness 4
@@ -80,11 +84,13 @@ test winbutton-1.3 {TkpComputeButtonGeometry procedure} {pcOnly} {
     radiobutton .b4 -bitmap question -bd 3 -indicatoron false
     pack .b1 .b2 .b3 .b4
     update
+    # with patch 463234 with native L&F enabled, this returns:
+    # {31 41 23 33 25 35 25 35}
     list [winfo reqwidth .b1] [winfo reqheight .b1] \
 	    [winfo reqwidth .b2] [winfo reqheight .b2] \
 	    [winfo reqwidth .b3] [winfo reqheight .b3] \
 	    [winfo reqwidth .b4] [winfo reqheight .b4]
-} {31 41 23 33 25 35 25 35}
+} {31 41 23 33 27 37 27 37}
 test winbutton-1.4 {TkpComputeButtonGeometry procedure} {pcOnly nonPortable} {
     eval destroy [winfo children .]
     label .b1 -text Xagqpim -bd 2 -padx 0 -pady 2 -font {{MS Sans Serif} 8}
